Kind request for information: AMD DC digital connectors not working anymore for Kaveri and older
Hello,
I am observing with kernel 5.8.0-rc1 that Kaveri and older digital connectors that used to work for DC testing purposes by reverting torvalds/linux@d9fda24 are not working anymore.
On laptops the screen remains black, on desktops the monitor does switch to sleep mode to green led for a moment then the screen goes back to sleep (blinking yellow led).
Being the DC support disabled for Kabini and older due to VGA analog connectors not implemented, and this cannot be considered an issue, could you please provide some high level information about which changes in kernel-5.8-rc1 may have affected the DC for Kaveri and older that were working till kernel 5.7 by just reverting [0] ?
According to my past (small) experience with DCE8/DCE6 code paths the problem may be related to:
- changes in AMD DC ( I have seen the introduction of panel_cntl)
- changes in dc/irqs (I saw none in kernel-5.8)
- changes in dc/bios, dc/core, dc/gpio (I saw none in kernel-5.8)
- changes in dc/amdgpu_dm (none seem related to Kaveri, Kabini)
- changes in amdgpu/amdgpu_device.c (Could they affect DC ?)
Since logging the problem is very problematic, do you have suggestions?
In drm/amd/display/dc/dm_services.h could relaxing the ASSERT(mask != 0)
[1] or uncommenting #define DM_CHECK_ADDR_0
[2] help to triage a register related issue?
Thanks for any info
Mauro